load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "confenv",
    srcs = ["confenv.go"],
    importpath = "github.com/aler9/rtsp-simple-server/internal/confenv",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "confenv_test",
    srcs = ["confenv_test.go"],
    embed = [":confenv"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
