load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "path",
    srcs = [
        "path.go",
        "readersmap.go",
    ],
    importpath = "github.com/aler9/rtsp-simple-server/internal/path",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/conf",
        "//internal/externalcmd",
        "//internal/logger",
        "//internal/readpublisher",
        "//internal/rtmpsource",
        "//internal/rtspsource",
        "//internal/source",
        "//internal/stats",
        "@com_github_aler9_gortsplib//:go_default_library",
        "@com_github_aler9_gortsplib//pkg/base:go_default_library",
    ],
)
