load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rtmp",
    srcs = [
        "client.go",
        "conn.go",
        "metadata.go",
        "server.go",
    ],
    importpath = "github.com/aler9/rtsp-simple-server/internal/rtmp",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aler9_gortsplib//:go_default_library",
        "@com_github_notedit_rtmp//av:go_default_library",
        "@com_github_notedit_rtmp//codec/h264:go_default_library",
        "@com_github_notedit_rtmp//format/flv/flvio:go_default_library",
        "@com_github_notedit_rtmp//format/rtmp:go_default_library",
    ],
)
