load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rtspconn",
    srcs = ["conn.go"],
    importpath = "github.com/aler9/rtsp-simple-server/internal/rtspconn",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/externalcmd",
        "//internal/logger",
        "//internal/readpublisher",
        "//internal/stats",
        "@com_github_aler9_gortsplib//:go_default_library",
        "@com_github_aler9_gortsplib//pkg/auth:go_default_library",
        "@com_github_aler9_gortsplib//pkg/base:go_default_library",
        "@com_github_aler9_gortsplib//pkg/headers:go_default_library",
        "@com_github_aler9_gortsplib//pkg/liberrors:go_default_library",
    ],
)
