load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rtspsession",
    srcs = ["session.go"],
    importpath = "github.com/aler9/rtsp-simple-server/internal/rtspsession",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/conf",
        "//internal/externalcmd",
        "//internal/logger",
        "//internal/readpublisher",
        "//internal/rtspconn",
        "@com_github_aler9_gortsplib//:go_default_library",
        "@com_github_aler9_gortsplib//pkg/base:go_default_library",
        "@com_github_aler9_gortsplib//pkg/headers:go_default_library",
    ],
)
