load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rtspsource",
    srcs = ["source.go"],
    importpath = "github.com/aler9/rtsp-simple-server/internal/rtspsource",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/logger",
        "//internal/source",
        "//internal/stats",
        "@com_github_aler9_gortsplib//:go_default_library",
        "@com_github_aler9_gortsplib//pkg/base:go_default_library",
    ],
)
